--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@auth/prisma-adapter": "^2.5.0",
     "@prisma/client": "^5.19.1",
     "@radix-ui/react-avatar": "^1.1.0",
+    "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-slot": "^1.1.0",
     "class-variance-authority": "^0.7.0",
