--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "next": "14.2.8",
     "next-auth": "^4.24.7",
     "react": "^18",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^18",
     "sweetalert2": "^11.14.0",
     "tailwind-merge": "^2.5.2",
