--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
     "react-hook-form": "^7.53.0",
+    "sharp": "^0.33.5",
     "sonner": "^1.5.0",
     "sweetalert2": "^11.14.0",
     "tailwind-merge": "^2.5.2",
